add members to projects
