# swagger/swagger.yaml
@@ -260,6 +260,40 @@ paths:
         '401':
           $ref: '#/components/responses/UnauthorizedError'
 
+  /api/projects/{_id}/members:
+    post:
+      tags:
+        - Projects
+      summary: Add Member to a Project
+      parameters:
+        - name: _id
+          in: path
+          description: Project ID
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - newUser
+              properties:
+                newUser:
+                  type: string
+                  description: user id
+      responses:
+        '201': 
+          description: Project JSON object
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Project'
+        '400':
+          $ref: '#/components/responses/BadRequestError'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+
 
 components:
   schemas:
